[284773] mobile browser alignemnt fixed for contact details sub page (#1432)

--- a/src/mobile/Components/sectionHeader/styles.module.scss
+++ b/src/mobile/Components/sectionHeader/styles.module.scss
@@ -39,3 +39,8 @@
     transform: rotate(180deg);
   }
 }
+
+.shiftRight {
+  position: relative;
+  left: 15px;
+}
